<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="MainActivity"
    android:background="@color/colorPrimary"
    android:theme="@style/SplashName">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:background="@drawable/vectores_19" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding_horizontal_login">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/hint_username"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/titlesLogin" />
                <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/close"
                    android:drawableLeft="@drawable/vector_03"
                    android:drawablePadding="@dimen/like_margintop_card"
                    android:hint="@string/correoEspol"
                    android:inputType="textEmailAddress"

                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/hint_password"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/titlesLogin" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/close"
                    android:drawableLeft="@drawable/vectores_18"
                    android:drawablePadding="@dimen/like_margintop_card"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />


                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/marginLogin"
                    android:layout_marginRight="@dimen/marginLogin"
                    android:background="@drawable/btn_rounded"
                    android:text="@string/btn_login"
                    android:textColor="@color/colorPrimary"
                    android:theme="@style/RaisedButtonDark"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/dontHaveAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_have_account"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        android:textStyle="bold"
                        android:paddingRight="@dimen/padding_drawable"/>

                    <TextView
                        android:id="@+id/createaccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/dontHaveAccount"
                        android:text="@string/createaccount"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>