<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.ProfileFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:background="@android:color/holo_orange_dark"
            android:textSize="20sp"
            android:paddingLeft="25dp"
            android:textColor="@android:color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Usuario"
                android:gravity="left"
                android:paddingLeft="25dp"
                android:textSize="20sp"
                android:layout_weight=".1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Usuario"
                android:gravity="left"
                android:paddingLeft="25dp"
                android:textSize="20sp"
                android:layout_weight=".1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                android:gravity="left"
                android:paddingLeft="25dp"
                android:textSize="20sp"
                android:layout_weight=".1"
                />
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                android:gravity="left"
                android:paddingLeft="25dp"
                android:textSize="20sp"
                android:layout_weight=".1"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changePassword"
            android:background="@android:color/holo_orange_dark"
            android:textSize="20sp"
            android:paddingLeft="25dp"
            android:textColor="@android:color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contraseña"
                android:gravity="left"
                android:paddingLeft="25dp"
                android:textSize="20sp"
                android:layout_weight=".1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contraseña"
                android:gravity="left"
                android:paddingLeft="25dp"
                android:textSize="20sp"
                android:layout_weight=".1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Repetir"
                android:gravity="left"
                android:paddingLeft="25dp"
                android:textSize="20sp"
                android:layout_weight=".1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Repetir"
                android:gravity="left"
                android:paddingLeft="25dp"
                android:textSize="20sp"
                android:layout_weight=".1"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personalization"
            android:background="@android:color/holo_orange_dark"
            android:textSize="20sp"
            android:paddingLeft="25dp"
            android:textColor="@android:color/black"/>
       <RadioGroup
           android:id="@+id/personalizacion"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <RadioButton
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:text="Tengo movilidad reducida"
               android:textSize="20sp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Uso de silla de ruedas"
                android:textSize="20sp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:text="Ninguna de las anteriores"/>
       </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">
            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GUARDAR"
                android:layout_weight=".1"/>
            <Button
                android:id="@+id/signOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CERRAR SESION"
                android:layout_weight=".1"/>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>